considered all the warning.